使用类实现简单数组

--- a/Business/LeetBusiness/build.gradle
+++ b/Business/LeetBusiness/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     implementation(rootProject.ext.dependencies["appcompat"])
     implementation(rootProject.ext.dependencies["annotation"])
     implementation project(path: ':LibraryLayer')
+    implementation project(path: ':XlogServer')
 }
