完善插件plugin配置

--- a/AptHelper/api-plugin/build.gradle
+++ b/AptHelper/api-plugin/build.gradle
@@ -8,7 +8,7 @@ buildscript {
 
 apply plugin: 'java'
 apply plugin: 'groovy'
-apply plugin: 'maven'
+apply plugin: 'com.github.dcendents.android-maven'
 
 sourceCompatibility = "1.8"
 targetCompatibility = "1.8"
