--- a/CommonLib/ApplicationLib/build.gradle
+++ b/CommonLib/ApplicationLib/build.gradle
@@ -30,4 +30,8 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation rootProject.ext.dependencies["appcompat"]
     implementation rootProject.ext.dependencies["annotation"]
+
+
+    implementation project(path: ':api-compiler')
+    implementation project(path: ':api-manager')
 }
