--- a/ServerLib/XlogServer/build.gradle
+++ b/ServerLib/XlogServer/build.gradle
@@ -11,7 +11,6 @@ android {
         targetSdkVersion rootProject.ext.android["targetSdkVersion"]
         versionCode rootProject.ext.android["versionCode"]
         versionName rootProject.ext.android["versionName"]
-        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
     }
 
     buildTypes {
@@ -38,8 +37,7 @@ configurations.all {
 }
 
 dependencies {
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+    implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation rootProject.ext.dependencies["okhttp"]
     implementation "com.google.code.gson:gson:2.8.5"
     implementation "com.squareup.okhttp3:okhttp:3.0.0"
