--- a/Business/BusinessInterface/build.gradle
+++ b/Business/BusinessInterface/build.gradle
@@ -29,4 +29,6 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation rootProject.ext.dependencies["appcompat"]
     implementation rootProject.ext.dependencies["annotation"]
+    implementation project(path: ':api-manager')
+    annotationProcessor project(path: ':api-compiler')
 }
