--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,8 @@ buildscript {
         classpath 'com.android.tools.build:gradle:3.2.1'
         //jitpack
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
+        //自定义插件
+        //classpath 'com.github.yangchong211.YCAppTool:api-plugin:1.3.8'
     }
 }
 
