--- a/CommonLib/ApplicationLib/build.gradle
+++ b/CommonLib/ApplicationLib/build.gradle
@@ -31,6 +31,9 @@ dependencies {
     implementation rootProject.ext.dependencies["appcompat"]
     implementation rootProject.ext.dependencies["annotation"]
 
-    implementation project(path: ':api-manager')
+    implementation  'com.github.yangchong211.YCModelBus:api-manager:1.3.6'
+    annotationProcessor 'com.github.yangchong211.YCModelBus:api-compiler:1.3.6'
+
+//    implementation project(path: ':api-manager')
     annotationProcessor project(path: ':api-compiler')
 }
