--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ buildscript {
         //jitpack
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
         //自定义插件
-        //classpath 'com.github.yangchong211.YCAppTool:api-plugin:1.3.8'
+        classpath 'com.github.yangchong211.YCModelBus:api-plugin:1.3.6'
     }
 }
 
