--- a/settings.gradle
+++ b/settings.gradle
@@ -85,7 +85,8 @@ project(':api-plugin').projectDir = new File('AptHelper/api-plugin')
 
 /* +++++++++ App监控库 +++++++++ */
 include ':MonitorAliveLib',':MonitorCatonLib',':MonitorAnrLib',':MonitorCrashLib',
-        ':MonitorNetLib', ':MonitorFileLib', ':MonitorOomLib', ':MonitorKeepAlive'
+        ':MonitorNetLib', ':MonitorFileLib', ':MonitorOomLib', ':MonitorKeepAlive',
+        ':MonitorXposed'
 project(':MonitorAliveLib').projectDir = new File('MonitorLib/MonitorAliveLib')
 project(':MonitorCatonLib').projectDir = new File('MonitorLib/MonitorCatonLib')
 project(':MonitorAnrLib').projectDir = new File('MonitorLib/MonitorAnrLib')
@@ -94,8 +95,5 @@ project(':MonitorNetLib').projectDir = new File('MonitorLib/MonitorNetLib')
 project(':MonitorFileLib').projectDir = new File('MonitorLib/MonitorFileLib')
 project(':MonitorOomLib').projectDir = new File('MonitorLib/MonitorOomLib')
 project(':MonitorKeepAlive').projectDir = new File('MonitorLib/MonitorKeepAlive')
-
-
-
-
+project(':MonitorXposed').projectDir = new File('MonitorLib/MonitorXposed')
 
