--- a/settings.gradle
+++ b/settings.gradle
@@ -84,7 +84,7 @@ project(':ThreadTaskLib').projectDir = new File('ToolLib/ThreadTaskLib')
 
 
 /* +++++++++ Apt框架基础工具库 +++++++++ */
-include ':api-compiler',':api-manager',
+include ':api-compiler',':api-manager',':api-plugin',
         ':ServiceLoaderApi', ':ServiceLoaderAnnotations', ':ServiceLoaderRegistry',
         ':ServiceLoaderPlugin', ':ServiceLoaderProcessor'
 project(':api-compiler').projectDir = new File('AptHelper/api-compiler')
