完善回到后台n时间杀死app案例

--- a/Business/DemoBusiness/build.gradle
+++ b/Business/DemoBusiness/build.gradle
@@ -74,7 +74,7 @@ dependencies {
     implementation project(path: ':PhotoWidget')
     implementation project(path: ':WidgetViewLib')
     implementation project(path: ':CountTimerLib')
-    implementation(rootProject.ext.dependencies["okHttp"])
+    implementation(rootProject.ext.dependencies["okhttp"])
     implementation(rootProject.ext.dependencies["gson"])
     implementation project(path: ':api-manager')
     implementation project(path: ':YCDialogLib')
