--- a/app/build.gradle
+++ b/app/build.gradle
@@ -222,6 +222,7 @@ dependencies {
     implementation project(path: ':MonitorAnrLib')
     implementation project(path: ':MonitorAliveLib')
     implementation project(path: ':LeakCanarySdk')
+    implementation project(path: ':AutoCloserLib')
 //    implementation 'com.github.yangchong211.YCAppTool:BlurViewLib:1.3.7'
 //    implementation 'com.github.yangchong211.YCAppTool:BannerViewLib:1.3.7'
 //    implementation 'com.github.yangchong211.YCAppTool:NfcServer:1.3.7'
