--- a/settings.gradle
+++ b/settings.gradle
@@ -83,8 +83,10 @@ project(':ThreadPoolLib').projectDir = new File('ToolLib/ThreadPoolLib')
 project(':ThreadTaskLib').projectDir = new File('ToolLib/ThreadTaskLib')
 project(':AutoCloserLib').projectDir = new File('ToolLib/AutoCloserLib')
 
+
+
 /* +++++++++ Apt框架基础工具库 +++++++++ */
-include ':api-compiler',':api-manager',':api-plugin',
+include ':api-compiler',':api-manager',
         ':ServiceLoaderApi', ':ServiceLoaderAnnotations', ':ServiceLoaderRegistry',
         ':ServiceLoaderPlugin', ':ServiceLoaderProcessor'
 project(':api-compiler').projectDir = new File('AptHelper/api-compiler')
