--- a/settings.gradle
+++ b/settings.gradle
@@ -102,7 +102,8 @@ project(':ServiceLoaderProcessor').projectDir = new File('AptHelper/ServiceLoade
 /* +++++++++ App监控库 +++++++++ */
 include ':MonitorAliveLib',':MonitorCatonLib',':MonitorAnrLib',':MonitorCrashLib',
         ':MonitorNetLib', ':MonitorFileLib', ':MonitorOomLib', ':MonitorKeepAlive',
-        ':MonitorXposed', ':LeakAndroid', ':LeakAnalyzer', ':LeakWatcher', ':LeakCanarySdk'
+        ':MonitorXposed', ':LeakAndroid', ':LeakAnalyzer', ':LeakWatcher',
+        ':LeakCanarySdk', ':MonitorApmLib'
 project(':MonitorAliveLib').projectDir = new File('MonitorLib/MonitorAliveLib')
 project(':MonitorCatonLib').projectDir = new File('MonitorLib/MonitorCatonLib')
 project(':MonitorAnrLib').projectDir = new File('MonitorLib/MonitorAnrLib')
@@ -116,5 +117,5 @@ project(':LeakAndroid').projectDir = new File('MonitorLib/LeakAndroid')
 project(':LeakAnalyzer').projectDir = new File('MonitorLib/LeakAnalyzer')
 project(':LeakWatcher').projectDir = new File('MonitorLib/LeakWatcher')
 project(':LeakCanarySdk').projectDir = new File('MonitorLib/LeakCanarySdk')
-
+project(':MonitorApmLib').projectDir = new File('MonitorLib/MonitorApmLib')
 
