学习MVVM架构代码

--- a/settings.gradle
+++ b/settings.gradle
@@ -5,6 +5,7 @@ include ':app'
 /* +++++++++ 业务组件层 +++++++++ */
 include ':GameBusiness', ':AnimBusiness',':LeetBusiness',':MvvmDatabinding',
         ':VideoBusiness', ':DemoBusiness', ':MvpTodoBusiness',':MvvmTodoLive',
+        ':MvcTodoBusiness',
         ':BusinessInterface'
 project(':GameBusiness').projectDir = new File('Business/GameBusiness')
 project(':VideoBusiness').projectDir = new File('Business/VideoBusiness')
@@ -14,6 +15,7 @@ project(':LeetBusiness').projectDir = new File('Business/LeetBusiness')
 project(':MvpTodoBusiness').projectDir = new File('Business/MvpTodoBusiness')
 project(':MvvmDatabinding').projectDir = new File('Business/MvvmDatabinding')
 project(':MvvmTodoLive').projectDir = new File('Business/MvvmTodoLive')
+project(':MvcTodoBusiness').projectDir = new File('Business/MvcTodoBusiness')
 project(':BusinessInterface').projectDir = new File('Business/BusinessInterface')
 
 
@@ -122,6 +124,5 @@ project(':LeakAnalyzer').projectDir = new File('MonitorLib/LeakAnalyzer')
 project(':LeakWatcher').projectDir = new File('MonitorLib/LeakWatcher')
 project(':LeakCanarySdk').projectDir = new File('MonitorLib/LeakCanarySdk')
 project(':MonitorApmLib').projectDir = new File('MonitorLib/MonitorApmLib')
-
 
 
