--- a/app/build.gradle
+++ b/app/build.gradle
@@ -227,6 +227,7 @@ dependencies {
     implementation project(path: ':MvpTodoBusiness')
     implementation project(path: ':MvvmDatabinding')
     implementation project(path: ':MvvmTodoLive')
+    implementation project(path: ':MvcTodoBusiness')
 //    implementation 'com.github.yangchong211.YCAppTool:BlurViewLib:1.3.7'
 //    implementation 'com.github.yangchong211.YCAppTool:BannerViewLib:1.3.7'
 //    implementation 'com.github.yangchong211.YCAppTool:NfcServer:1.3.7'
