--- a/Business/MvpTodoBusiness/build.gradle
+++ b/Business/MvpTodoBusiness/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     implementation(rootProject.ext.dependencies["room-runtime"])
     annotationProcessor(rootProject.ext.dependencies["room-compiler"])
     implementation project(path: ':LibraryLayer')
+    implementation project(path: ':ToolUtilsLib')
     implementation "androidx.legacy:legacy-support-v4:1.0.0"
     implementation "com.google.guava:guava:27.0.1-android"
 }
