mvp案例职责学习

--- a/Business/MvcTodoBusiness/build.gradle
+++ b/Business/MvcTodoBusiness/build.gradle
@@ -20,10 +20,13 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    //jdk1.8
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
 }
 
 dependencies {
