--- a/yc.gradle
+++ b/yc.gradle
@@ -29,7 +29,7 @@ ext {
                zxing_version           : "3.3.3"
     ]
 
-    constraintLayoutVersion = '1.0.0'
+    coordinatorlayoutVersion = '1.0.0'
     appcompatVersion = '1.2.0'
     constraintlayoutVersion = '1.1.3'
     roomVersion = '2.0.0'
@@ -43,7 +43,7 @@ ext {
     databindingVersion = '3.2.1'
 
     dependencies = [
-                coordinatorlayout   : "androidx.coordinatorlayout:coordinatorlayout:${constraintLayoutVersion}",
+                coordinatorlayout   : "androidx.coordinatorlayout:coordinatorlayout:${coordinatorlayoutVersion}",
                 appcompat           : "androidx.appcompat:appcompat:${appcompatVersion}",
                 constraintlayout    : "androidx.constraintlayout:constraintlayout:${constraintlayoutVersion}",
                 annotation          : "androidx.annotation:annotation:${annotationVersion}",
@@ -77,7 +77,6 @@ ext {
                 "YCProgressLib"               : "cn.yc:YCProgressLib:1.2.7",
                 "YCCustomTextLib"             : "cn.yc:YCCustomTextLib:2.1.4",
                 "YCGalleryLib"                : "cn.yc:YCGalleryLib:1.1.5",
-                "YCBannerLib"                 : "cn.yc:YCBannerLib:1.4.0",
                 "YCVideoPlayerLib"            : "cn.yc:YCVideoPlayerLib:2.6.6",
 
                 //tools
