--- a/AptHelper/ServiceLoaderPlugin/build.gradle
+++ b/AptHelper/ServiceLoaderPlugin/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'java'
 apply plugin: 'groovy'
+apply plugin: 'com.github.dcendents.android-maven'
+
 
 sourceCompatibility = "1.8"
 targetCompatibility = "1.8"
