--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 //设置app空壳始终是application模式
 apply plugin: 'com.android.application'
+//apply plugin: 'com.yc.spi'
 
 android {
     compileSdkVersion rootProject.ext.android["compileSdkVersion"]
@@ -228,6 +229,8 @@ dependencies {
     implementation project(path: ':MvvmDatabinding')
     implementation project(path: ':MvvmTodoLive')
     implementation project(path: ':MvcTodoBusiness')
+    implementation 'com.github.yangchong211.YCAppTool:ServiceLoaderApi:1.4.2'
+    annotationProcessor 'com.github.yangchong211.YCAppTool:ServiceLoaderProcessor:1.4.2'
 //    implementation 'com.github.yangchong211.YCAppTool:BlurViewLib:1.3.7'
 //    implementation 'com.github.yangchong211.YCAppTool:BannerViewLib:1.3.7'
 //    implementation 'com.github.yangchong211.YCAppTool:NfcServer:1.3.7'
