--- a/Business/BusinessInterface/build.gradle
+++ b/Business/BusinessInterface/build.gradle
@@ -31,4 +31,7 @@ dependencies {
     implementation rootProject.ext.dependencies["annotation"]
     implementation project(path: ':api-manager')
     annotationProcessor project(path: ':api-compiler')
+    //ServiceLoader
+    implementation 'com.github.yangchong211.YCAppTool:ServiceLoaderApi:1.4.2.4'
+    annotationProcessor 'com.github.yangchong211.YCAppTool:ServiceLoaderProcessor:1.4.2.4'
 }
