--- a/Business/LeetBusiness/build.gradle
+++ b/Business/LeetBusiness/build.gradle
@@ -32,4 +32,6 @@ dependencies {
     implementation(rootProject.ext.dependencies["annotation"])
     implementation project(path: ':LibraryLayer')
     implementation project(path: ':XlogServer')
+
+    api project(path: ':BusinessInterface')
 }
