--- a/Business/DemoBusiness/build.gradle
+++ b/Business/DemoBusiness/build.gradle
@@ -80,6 +80,9 @@ dependencies {
     implementation project(path: ':YCDialogLib')
     annotationProcessor project(path: ':api-compiler')
 
-    implementation 'com.github.yangchong211.YCAppTool:ServiceLoaderApi:1.4.2'
-    annotationProcessor 'com.github.yangchong211.YCAppTool:ServiceLoaderProcessor:1.4.2'
+    implementation 'com.github.yangchong211.YCAppTool:ServiceLoaderApi:1.4.2.4'
+    annotationProcessor 'com.github.yangchong211.YCAppTool:ServiceLoaderProcessor:1.4.2.4'
+
+
+    api project(path: ':BusinessInterface')
 }
