--- a/Business/GameBusiness/build.gradle
+++ b/Business/GameBusiness/build.gradle
@@ -65,4 +65,6 @@ dependencies {
     implementation project(path: ':HttpServer')
     implementation project(path: ':ConfigLayer')
     implementation project(path: ':LibraryLayer')
+
+    api project(path: ':BusinessInterface')
 }
