--- a/app/build.gradle
+++ b/app/build.gradle
@@ -229,8 +229,9 @@ dependencies {
     implementation project(path: ':MvvmDatabinding')
     implementation project(path: ':MvvmTodoLive')
     implementation project(path: ':MvcTodoBusiness')
-    implementation 'com.github.yangchong211.YCAppTool:ServiceLoaderApi:1.4.2'
-    annotationProcessor 'com.github.yangchong211.YCAppTool:ServiceLoaderProcessor:1.4.2'
+    implementation 'com.github.yangchong211.YCAppTool:ServiceLoaderApi:1.4.2.4'
+    implementation project(path: ':BusinessInterface')
+    annotationProcessor 'com.github.yangchong211.YCAppTool:ServiceLoaderProcessor:1.4.2.4'
 //    implementation 'com.github.yangchong211.YCAppTool:BlurViewLib:1.3.7'
 //    implementation 'com.github.yangchong211.YCAppTool:BannerViewLib:1.3.7'
 //    implementation 'com.github.yangchong211.YCAppTool:NfcServer:1.3.7'
