--- a/Business/BusinessInterface/build.gradle
+++ b/Business/BusinessInterface/build.gradle
@@ -29,8 +29,8 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation rootProject.ext.dependencies["appcompat"]
     implementation rootProject.ext.dependencies["annotation"]
-    implementation project(path: ':api-manager')
-    annotationProcessor project(path: ':api-compiler')
+    implementation project(path: ':RouteManager')
+    annotationProcessor project(path: ':RouteCompiler')
     //ServiceLoader
     implementation 'com.github.yangchong211.YCAppTool:ServiceLoaderApi:1.4.2.4'
     annotationProcessor 'com.github.yangchong211.YCAppTool:ServiceLoaderProcessor:1.4.2.4'
