--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
 
 
     <application
-        android:name="com.yc.lifehelper.MainApplication"
+        android:name="com.yc.lifehelper.application.MainApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_yc_name"
