--- a/AptHelper/ServiceLoaderApi/build.gradle
+++ b/AptHelper/ServiceLoaderApi/build.gradle
@@ -14,5 +14,5 @@ targetCompatibility = JavaVersion.VERSION_1_8
 
 dependencies {
     implementation project(':ServiceLoaderAnnotations')
-    implementation project(':ServiceLoaderRegistry')
+    compileOnly project(':ServiceLoaderRegistry')
 }
