--- a/AptHelper/ServiceLoaderRegistry/build.gradle
+++ b/AptHelper/ServiceLoaderRegistry/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'java'
 //迁移到jitpack
-apply plugin: 'com.github.dcendents.android-maven'
+//apply plugin: 'com.github.dcendents.android-maven'
 
 buildscript {
     repositories {
