--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 //设置app空壳始终是application模式
 apply plugin: 'com.android.application'
-//apply plugin: 'com.yc.spi.loader'
+apply plugin: 'com.yc.spi.loader'
+apply plugin: 'com.yc.time.loader'
 
 android {
     compileSdkVersion rootProject.ext.android["compileSdkVersion"]
@@ -228,9 +229,9 @@ dependencies {
     implementation project(path: ':MvvmDatabinding')
     implementation project(path: ':MvvmTodoLive')
     implementation project(path: ':MvcTodoBusiness')
-    implementation 'com.github.yangchong211.YCAppTool:ServiceLoaderApi:1.4.2.4'
+    implementation 'com.github.yangchong211.YCAppTool:ServiceLoaderApi:1.4.3'
     implementation project(path: ':BusinessInterface')
-    annotationProcessor 'com.github.yangchong211.YCAppTool:ServiceLoaderProcessor:1.4.2.4'
+    annotationProcessor 'com.github.yangchong211.YCAppTool:ServiceLoaderProcessor:1.4.3'
 //    implementation 'com.github.yangchong211.YCAppTool:BlurViewLib:1.3.7'
 //    implementation 'com.github.yangchong211.YCAppTool:BannerViewLib:1.3.7'
 //    implementation 'com.github.yangchong211.YCAppTool:NfcServer:1.3.7'
