--- a/ToolLib/LongevityLib/build.gradle
+++ b/ToolLib/LongevityLib/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation(rootProject.ext.dependencies["appcompat"])
     implementation(rootProject.ext.dependencies["annotation"])
+    implementation(rootProject.ext.dependencies["core"])
 }
